--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-numpy==1.16.2
-scipy==1.2.1
+numpy==1.18.1
 wfdb==2.2.1
-matplotlib==3.0.3
-pandas==0.24.2
-peakutils==1.3.3
-scikit_learn==0.24.1
+tensorflow==2.3.1
+tensorflow-gpu==2.3.1
+
+
